--- a/deploy/ansible/countdown/files/docker-compose.yml
+++ b/deploy/ansible/countdown/files/docker-compose.yml
@@ -34,8 +34,8 @@ services:
     - "traefik.backend=flaskserver"
     - "traefik.frontend.rule=Host:flaskserver.docker"
     - "traefik.backend.loadbalancer.method=drr"
-    depends_on:
-     - celery
+    # depends_on:
+    #  - celery
 
   # redis:
   #   image: redis:alpine
@@ -57,22 +57,22 @@ services:
     depends_on:
      - flaskserver
 
-  socketio:
-   build:
-    context: .
-    dockerfile: ./flask_socketio_server/Dockerfile
-   restart: always
-   ports:
-      - 8000:8000
-   labels:
-    - "traefik.enable=true"
-    - "traefik.backend=flasksocketio"
-    - "traefik.frontend.rule=Host:flasksocketio.docker"
-    - "traefik.backend.loadbalancer.stickiness=true"
-    - "traefik.backend.loadbalancer.method=drr"
-   depends_on:
-    - redis
-    - celery
+  # socketio:
+  #  build:
+  #   context: .
+  #   dockerfile: ./flask_socketio_server/Dockerfile
+  #  restart: always
+  #  ports:
+  #     - 8000:8000
+  #  labels:
+  #   - "traefik.enable=true"
+  #   - "traefik.backend=flasksocketio"
+  #   - "traefik.frontend.rule=Host:flasksocketio.docker"
+  #   - "traefik.backend.loadbalancer.stickiness=true"
+  #   - "traefik.backend.loadbalancer.method=drr"
+  #  depends_on:
+  #   - redis
+  #   - celery
 
   portainer:
     image: portainer/portainer
